# Insurrection

./: README.md  ai_practice.py  game-handler.py  insurrection.py  insurrection_game.py  pyproject.toml
src/: game_handler.py
src/logic/: actions.py
src/models/: actions.py  cards.py  display.py
src/models/ai_threads/: assistant.py
src/models/ai_threads/ai_assets/: game.json
src/models/players/: base_model.py  bot.py  model.py
src/players/: model.py
