[tool.poetry]
name = "insurrection"
version = "0.1.0"
description = ""
authors = ["mitburr <mitburr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
openai = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
